--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/socket.io": "^3.0.1",
     "bull": "^4.16.5",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
@@ -19,7 +20,8 @@
     "ioredis": "^5.6.1",
     "mongoose": "^8.16.0",
     "node-cron": "^4.1.1",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
